--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,14 @@ buildscript {
     ext.kotlin_version = '1.2.61'
     ext.room_version = "2.0.0-rc01"
     ext.lifecycle_version = "2.0.0-rc01"
-    ext.ktx_version = "1.0.0-rc01"
+    ext.ktx_version = "1.0.0-rc02"
     ext.constraint_layout_version = "2.0.0-alpha2"
-    ext.appcompat_version = "1.0.0-rc01"
+    ext.appcompat_version = "1.0.0-rc02"
     ext.core_testing_version = "2.0.0-rc01"
     ext.dagger_version = "2.16"
     ext.espresso_version = "3.1.0-alpha4"
     ext.android_test_version = "1.1.0-alpha4"
+    ext.retrofit_version = "2.4.0"
 
     repositories {
         google()
