--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ android {
         enabled = true
     }
     sourceSets {
-        androidTest.assets.srcDirs += files("$projectDir/room/schema".toString())
+        androidTest.assets.srcDirs += files("$projectDir/room/schema")
     }
     testOptions {
         execution 'ANDROIDX_TEST_ORCHESTRATOR'
@@ -56,7 +56,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:$lifecycle_version"
 
-    implementation "com.android.support:design:28.0.0-rc02"
+    implementation "com.android.support:design:28.0.0"
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
