--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,12 @@
 
 buildscript {
 
-    ext.kotlin_version = '1.2.70'
+    ext.kotlin_version = '1.2.71'
     ext.room_version = "2.0.0-rc01"
-    ext.lifecycle_version = "2.0.0-rc01"
-    ext.ktx_version = "1.0.0-rc02"
+    ext.lifecycle_version = "2.0.0"
+    ext.ktx_version = "1.0.0"
     ext.constraint_layout_version = "2.0.0-alpha2"
-    ext.appcompat_version = "1.0.0-rc02"
+    ext.appcompat_version = "1.0.0"
     ext.core_testing_version = "2.0.0-rc01"
     ext.dagger_version = "2.16"
     ext.espresso_version = "3.1.0-alpha4"
@@ -19,7 +19,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0-rc03'
+        classpath 'com.android.tools.build:gradle:3.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
