Room version upgrade.

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
 
     ext.kotlin_version = '1.2.71'
-    ext.room_version = "2.0.0-rc01"
+    ext.room_version = "2.0.0"
     ext.lifecycle_version = "2.0.0"
     ext.ktx_version = "1.0.0"
     ext.constraint_layout_version = "2.0.0-alpha2"
