--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
     ext.espresso_version = "3.1.0-alpha4"
     ext.android_test_version = "1.1.0-alpha4"
     ext.retrofit_version = "2.4.0"
+    ext.paging_version = "2.0.0"
 
     repositories {
         google()
