--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.epam.nyekilajos.roompagingpoc"
         minSdkVersion 19
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -31,9 +31,6 @@ android {
     sourceSets {
         androidTest.assets.srcDirs += files("$projectDir/room/schema")
     }
-    testOptions {
-        execution 'ANDROIDX_TEST_ORCHESTRATOR'
-    }
 }
 
 kapt {
@@ -45,7 +42,8 @@ kapt {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2"
 
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
@@ -54,13 +52,15 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:$lifecycle_version"
 
-    implementation "com.android.support:design:28.0.0"
+    implementation "com.google.android.material:material:1.0.0"
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-rxjava2:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 
     implementation "com.google.dagger:dagger:$dagger_version"
     implementation "com.google.dagger:dagger-android:$dagger_version"
@@ -68,24 +68,29 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
 
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
 
     testImplementation 'junit:junit:4.12'
-    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0-RC1'
-    testImplementation "androidx.arch.core:core-testing:$core_testing_version"
+    testImplementation 'org.mockito:mockito-core:3.2.4'
+    testImplementation('com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0') {
+        exclude group: 'org.mockito', module: 'mockito-core'
+    }
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0'
+    testImplementation ("androidx.arch.core:core-testing:$core_testing_version") {
+        exclude group: 'org.mockito', module: 'mockito-core'
+    }
 
     androidTestImplementation 'androidx.test.uiautomator:uiautomator-v18:2.2.0-alpha1'
 
     androidTestImplementation "androidx.room:room-testing:$room_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$espresso_version"
-    androidTestImplementation "androidx.arch.core:core-testing:$core_testing_version"
-    androidTestImplementation "androidx.test:runner:$android_test_version"
+    androidTestImplementation ("androidx.arch.core:core-testing:$core_testing_version") {
+        exclude group: 'org.mockito', module: 'mockito-core'
+    }
+    androidTestImplementation "androidx.test.ext:junit-ktx:1.1.1"
     androidTestImplementation "androidx.test:rules:$android_test_version"
+
     androidTestUtil "androidx.test:orchestrator:$android_test_version"
 }
