--- a/build.gradle
+++ b/build.gradle
@@ -2,24 +2,24 @@
 
 buildscript {
 
-    ext.kotlin_version = '1.3.11'
-    ext.room_version = "2.0.0"
-    ext.lifecycle_version = "2.0.0"
-    ext.ktx_version = "1.0.1"
-    ext.constraint_layout_version = "2.0.0-alpha3"
-    ext.appcompat_version = "1.0.2"
-    ext.core_testing_version = "2.0.0-rc01"
-    ext.dagger_version = "2.16"
-    ext.espresso_version = "3.1.0-alpha4"
+    ext.kotlin_version = '1.3.61'
+    ext.room_version = "2.2.3"
+    ext.lifecycle_version = "2.2.0-rc03"
+    ext.ktx_version = "1.1.0"
+    ext.constraint_layout_version = "2.0.0-beta4"
+    ext.appcompat_version = "1.1.0"
+    ext.core_testing_version = "2.1.0"
+    ext.dagger_version = "2.25.4"
+    ext.espresso_version = "3.2.0"
     ext.android_test_version = "1.1.0-alpha4"
-    ext.retrofit_version = "2.4.0"
+    ext.retrofit_version = "2.7.1"
 
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
